# forthos

./: Cargo.toml  README.md
src/: client.rs  embeddings.rs  lib.rs  llm.rs  parser.rs  prompt.rs  responses.rs
src/client/: client_build.rs  config_build.rs  models.rs
src/embeddings/: models.rs  parse.rs  request.rs
src/parser/: embeddings.rs  responses.rs
src/prompt/: embeddings.rs  responses.rs
src/responses/: input.rs  models.rs  parse.rs  request.rs  text.rs
tests/: openai_integration.rs
