[package]
name = "forthos"
version = "0.1.0"
edition = "2024"
authors = ["Rauf Hamidy <raufhamidy10@gmail.com>"]
description = "A Rust wrapper for OpenAI's responses and embeddings endpoints with prompt caching support."
readme = "README.md"
repository = "https://github.com/yourusername/forthos"
license = "MIT"
keywords = ["openai", "llm", "structured-outputs", "embeddings", "ai"]
categories = ["api-bindings", "asynchronous"]
exclude = [".env", "tests/*"]

[dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# LLM
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing utilities
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
dotenvy = "0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
