[package]
name = "forthos"
version = "0.2.0"
edition = "2024"
authors = ["Rauf Hamidy <raufhamidy10@gmail.com>"]
description = "A Rust wrapper for OpenAI's responses and embeddings endpoints with prompt caching support."
readme = "README.md"
repository = "https://github.com/raufh10/forthos"
license = "MIT"
keywords = ["openai", "llm", "structured-outputs", "embeddings", "ai"]
categories = ["api-bindings", "asynchronous"]
exclude = [".env", "tests/*"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
yaml_serde = "0.10.4"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
